--- a/public/rules.html
+++ b/public/rules.html
@@ -5,24 +5,22 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Among Legend : Trop fun hihihi (1st time JavaScript + react soyez indulgent sah)"
-    />
+    <meta name="description" content="Rules for Among Legends game" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Among Legends</title>
+    <title>Among Legends - Rules</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
+    <style>
+      /* Custom styles for rules page can be added here */
+    </style>
   </head>
 
   <body class="bg-dark">
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
     <div class="container py-5">
       <h1 class="text-white">Rules for Among Legends</h1>
       <p class="text-white">
